Fix output of errors

--- a/generators/app/templates/ustutt-titlepage.sty
+++ b/generators/app/templates/ustutt-titlepage.sty
@@ -14,22 +14,22 @@
 
 \newcommand*{\firstexaminer}[1]{\def\@firstexaminer{#1\xspace}}
 \def\@firstexaminer{
-	\@latex@warning@no@line{Package `scrthesis': No \noexpand\firstexaminer given}}
+	\@latex@warning@no@line{Package `ustutt-titlepage': No \noexpand\firstexaminer given}}
 \newcommand*{\secondexaminer}[1]{\def\@secondexaminer{#1\xspace}}
 \def\@secondexaminer{
-	\@latex@warning@no@line{Package `scrthesis': No \noexpand\secondexaminer given}}
+	\@latex@warning@no@line{Package `ustutt-titlepage': No \noexpand\secondexaminer given}}
 \newcommand*{\dateofexamination}[1]{\def\@dateofexamination{#1\xspace}}
 \def\@dateofexamination{
-	\@latex@warning@no@line{Package `scrthesis': No \noexpand\dateofexamination given}}
+	\@latex@warning@no@line{Package `ustutt-titlepage': No \noexpand\dateofexamination given}}
 \newcommand*{\placeofbirth}[1]{\def\@placeofbirth{#1\xspace}}
 \def\@placeofbirth{
-	\@latex@warning@no@line{Package `scrthesis': No \noexpand\placeofbirth given}}
+	\@latex@warning@no@line{Package `ustutt-titlepage': No \noexpand\placeofbirth given}}
 \newcommand*{\faculty}[1]{\def\@faculty{#1\xspace}}
 \def\@faculty{
-	\@latex@warning@no@line{Package `scrthesis': No \noexpand\faculty given}}
+	\@latex@warning@no@line{Package `ustutt-titlepage': No \noexpand\faculty given}}
 \newcommand*{\department}[1]{\def\@department{#1\xspace}}
 \def\@department{
-	\@latex@warning@no@line{Package `scrthesis': No \noexpand\department given}}
+	\@latex@warning@no@line{Package `ustutt-titlepage': No \noexpand\department given}}
 \newcommand*{\university}[1]{\def\@university{#1\xspace}}
 \def\@university{Universit\"at Stuttgart\xspace}
 \newcommand*{\keywords}[1]{\def\@keywords{#1}}
