Make use of ustutt-titlepage (and add placeholder for logo)

--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -211,7 +211,8 @@
 <%- include('powerset.preamble.en.tex', this); -%>
 <% if (documentclass == 'ustutt') { -%>
 
-\usepackage{shared/titlepage}
+% %\renewcommand{\includeustuttlogo}{\includegraphics[width=6cm]{ustutt-logo}}
+\usepackage{ustutt-titlepage}
 
 % binding correction
 \setlength{\evensidemargin}{-24pt}
