--- a/generators/app/templates/ustutt-titlepage.sty
+++ b/generators/app/templates/ustutt-titlepage.sty
@@ -35,6 +35,9 @@
 \newcommand*{\keywords}[1]{\def\@keywords{#1}}
 \def\@keywords{}
 
+\RequirePackage{tikzpeople}
+\newcommand{\includeustuttlogo}{\begin{tikzpicture}\node[graduate,shield,sword,minimum size=1.5cm] at (0,0) {}\end{tikzpicture}};
+
 \renewcommand\maketitle{
   \btypeout{Title Page}
   %\hypersetup{pdftitle={\@title}}
@@ -50,7 +53,7 @@
     %\vskip 60\p@
     \begin{center}
       \setlength{\parskip}{0pt}
-      \includegraphics[width=6cm]{shared/ustutt-logo} \\
+      \includeustuttlogo{}\\
       \vspace{18pt}
       {\LARGE \textbf \@title \par}
       \vspace{30pt}
