--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -125,6 +125,10 @@
 <%# ACM already provides a very good font configuration; thus we do not need to override it -%>
 <% if (documentclass != 'acmart') { %>
 <%- include('font.preamble.en.tex', this); -%>
+<% } else -%>
+<%# nevertheless, we need fontspec for selnolig -%>
+\usepackage[no-math]{fontspec}
+\usepackage{unicode-math}
 <% } -%>
 
 <%- include('microtype.preamble.en.tex', this); -%>
