--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -125,7 +125,7 @@
 <%# ACM already provides a very good font configuration; thus we do not need to override it -%>
 <% if (documentclass != 'acmart') { %>
 <%- include('font.preamble.en.tex', this); -%>
-<% } else -%>
+<% } else { -%>
 <%# nevertheless, we need fontspec for selnolig -%>
 \usepackage[no-math]{fontspec}
 \usepackage{unicode-math}
