--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -127,8 +127,18 @@
 <%- include('font.preamble.en.tex', this); -%>
 <% } else { -%>
 <%# nevertheless, we need fontspec for selnolig -%>
+<% if ((latexcompiler == "lualatex") || (latexcompiler == "both")) { -%>
+<% if (latexcompiler == "both") { -%>
+\ifluatex
+<% } -%>
+% Enable correct rendering of ligatures - provided by https://ctan.org/pkg/selnolig
+% See ADR-0009 for alternatives
 \usepackage[no-math]{fontspec}
 \usepackage{unicode-math}
+<% if (latexcompiler == "both") { -%>
+\fi
+<% } -%>
+<% } -%>
 <% } -%>
 
 <%- include('microtype.preamble.en.tex', this); -%>
