--- a/generators/app/templates/ustutt-titlepage.sty
+++ b/generators/app/templates/ustutt-titlepage.sty
@@ -36,7 +36,7 @@
 \def\@keywords{}
 
 \RequirePackage{tikzpeople}
-\newcommand{\includeustuttlogo}{\begin{tikzpicture}\node[graduate,shield,sword,minimum size=1.5cm] at (0,0) {}\end{tikzpicture}}
+\newcommand{\includeustuttlogo}{\begin{tikzpicture}\node[graduate,shield,sword,minimum size=1.5cm] at (0,0) {};\end{tikzpicture}}
 
 \renewcommand\maketitle{
   \btypeout{Title Page}
