Fix typo in scientific-thesis and listings inclusion

--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -95,7 +95,7 @@
   bibliography=totoc,
   % idxtotoc,   % Index ins Inhaltsverzeichnis
   % liststotoc, % List of * ins Inhaltsverzeichnis, mit liststotocnumbered werden die Abbildungsverzeichnisse nummeriert
-  lsitof=totoc,
+  listof=totoc,
   % headsepline,
   % cleardoublepage=empty,
   % parskip=half,
