Initial support for todonotes

--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -180,13 +180,8 @@
 
 <%- include('floatflt.preamble.en.tex', this); -%>
 <% break; } -%>
-<% if (todo == 'pdfcomment') { -%>
 
-<%- include('pdfcomment.preamble.en.tex', this); -%>
-<% } else { -%>
-
-<%- include('plainlatextodo.preamble.en.tex', this); -%>
-<% } -%>
+<%- include('todo.preamble.en.tex', this); -%>
 
 % Fußnoten unter Gleitumgebungen ("floats") platzieren
 % Quelle: https://tex.stackexchange.com/a/32993/9075
