--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -188,13 +188,8 @@
 
 <%- include('floatflt.preamble.en.tex', this); -%>
 <% break; } -%>
-<% if (todo == 'pdfcomment') { -%>
 
-<%- include('pdfcomment.preamble.en.tex', this); -%>
-<% } else { -%>
-
-<%- include('plainlatextodo.preamble.en.tex', this); -%>
-<% } -%>
+<%- include('todo.preamble.en.tex', this); -%>
 
 % Put footnotes below floats
 % Source: https://tex.stackexchange.com/a/32993/9075
