Add graphicsppath config for USTUTT

--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -144,7 +144,12 @@
 <%- include('microtype.preamble.en.tex', this); -%>
 
 \usepackage{graphicx}
+<% if (documentclass == 'ustutt') { %>
 
+% Base folder, so there is no need to repeat this over and over again.
+\graphicspath{ {figures/} }
+
+<% } -%>
 <%- include('diagbox.preamble.en.tex', this); -%>
 
 <%# Required for package pdfcomment later -%>
