Add comment to xspace

--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -233,6 +233,7 @@
 \setlength{\oddsidemargin}{-24pt}
 <% } -%>
 
+% Allows for defining commands that don't eat spaces.
 \usepackage{xspace}
 
 \newcommand{\eg}{e.g.,\ }
