Add \IfDraft for ustutt

--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -102,6 +102,10 @@
   %               draft    % um zu sehen, wo noch nachgebessert werden muss - wichtig, da Bindungskorrektur mit drin
   draft=false
 ]{scrbook}
+
+\newcommand{\IfDraft}[1]{\ifx\@draft\@undefined \else #1 \fi}
+% \newcommand{\IfNotDraft}[1]{\ifx\@draft\@undefined #1 \fi}
+% \newcommand{\IfNotDraftElse}[2]{\ifx\@draft\@undefined #1 \else #2 \fi}
 <% break; default: -%>
 
 % not yet supported template. Please report to the author of generator-latex-template
