Add xolor as separate file

--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -139,8 +139,7 @@
 
 <%- include('diagbox.preamble.en.tex', this); -%>
 
-<%# Required for package pdfcomment later -%>
-\usepackage{xcolor}
+<%- include('xcolor.preamble.de.tex', this); -%>
 
 <% if (listings == 'listings') { -%>
 <%- include('listings.preamble.de.tex', this); -%>
