--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -136,6 +136,12 @@
 <%- include('microtype.preamble.de.tex', this); -%>
 
 \usepackage{graphicx}
+<% if (documentclass == 'ustutt') { %>
+
+% Base folder, so there is no need to repeat this over and over again.
+\graphicspath{ {figures/} }
+
+<% } -%>
 
 <%- include('diagbox.preamble.en.tex', this); -%>
 
