Initial ustutt preamble and pagestyle configuration

--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -147,6 +147,11 @@
 
 <%- include('microtype.preamble.en.tex', this); -%>
 
+<% if (documentclass == 'ustutt') { %>
+<%- include('ustutt-pagestyle.preamble.en.tex', this); %>
+<%- include('ustutt-chapterstyle.preamble.en.tex', this); -%>
+<% } -%>
+
 \usepackage{graphicx}
 <% if (documentclass == 'ustutt') { %>
 
