--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -135,6 +135,11 @@
 
 <%- include('microtype.preamble.de.tex', this); -%>
 
+<% if (documentclass == 'ustutt') { %>
+<%- include('ustutt-pagestyle.preamble.en.tex', this); %>
+<%- include('ustutt-chapterstyle.preamble.en.tex', this); -%>
+<% } -%>
+
 \usepackage{graphicx}
 <% if (documentclass == 'ustutt') { %>
 
