--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -203,7 +203,8 @@
 <%- include('subfig.preamble.en.tex', this); %>
 <% if (texlive >= 2021) { %><%- include('mindflow.preamble.en.tex', this); %>
 <% } -%>
-<% if (feature.acronyms) { -%>\usepackage{amsmath}<% } // acronyms load amsmath, which has to be loaded before cleveref -%>
+<%# acronyms load amsmath, which has to be loaded before cleveref -%>
+<% if (isThesis || feature.acronyms) { %><%- include('math.preamble.en.tex', this); -%>
 <%- include('cleveref.preamble.de.tex', this); %>
 \usepackage{lipsum}
 <% if (examples) { -%>
