--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -201,10 +201,9 @@
 <%- include('siunitx.preamble.de.tex'); %>
 <%- include('hyperref.preamble.de.tex', this); %>
 <%- include('subfig.preamble.en.tex', this); %>
-<% if (texlive >= 2021) { %><%- include('mindflow.preamble.en.tex', this); %>
-<% } -%>
+<% if (texlive >= 2021) { %><%- include('mindflow.preamble.en.tex', this); %><% } -%>
 <%# acronyms load amsmath, which has to be loaded before cleveref -%>
-<% if (isThesis || feature.acronyms) { %><%- include('math.preamble.en.tex', this); -%>
+<% if (isThesis || feature.acronyms) { %><%- include('math.preamble.en.tex', this); -%><% } -%>
 <%- include('cleveref.preamble.de.tex', this); %>
 \usepackage{lipsum}
 <% if (examples) { -%>
