--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -216,7 +216,7 @@
 <% if (texlive >= 2021) { %><%- include('mindflow.preamble.en.tex', this); %>
 <% } -%>
 <%# acronyms load amsmath, which has to be loaded before cleveref -%>
-<% if (isThesis || feature.acronyms) { %><%- include('math.preamble.en.tex', this); -%>
+<% if (isThesis || feature.acronyms) { %><%- include('math.preamble.en.tex', this); -%><% } -%>
 <%- include('cleveref.preamble.en.tex', this); %>
 \usepackage{lipsum}
 <% if (examples) { -%>
