Add German bookabs.preamble

--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -161,7 +161,7 @@
 <% if (enquotes == 'csquotes') { %><%- include('csquotes.preamble.en.tex', this); %><% } -%>
 <% if (enquotes == 'textcmds') { %><%- include('textcmds.preamble.en.tex', this); %><% } -%>
 
-<%- include('booktabs.preamble.en.tex', this); -%>
+<%- include('booktabs.preamble.de.tex', this); -%>
 
 <%- include('paralist.preamble.en.tex', this); -%>
 <% switch (documentclass) {
