--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -191,6 +191,8 @@
 <%- include('floatflt.preamble.en.tex', this); -%>
 <% break; } -%>
 
+<%- include('tables.preamble.de.tex', this); -%>
+
 <%- include('todo.preamble.en.tex', this); -%>
 
 % Fußnoten unter Gleitumgebungen ("floats") platzieren
