--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -170,7 +170,7 @@
   case "lncs": -%>
 
 <%- include('natbib.preamble.en.tex', this); -%>
-<% break; case "scientific-thesis": -%>
+<% break; case "scientific-thesis": case "ustutt": -%>
 <%- include('biblatex.preamble.en.tex', this); -%>
 <% break; } -%>
 <% switch (documentclass) { case "acmart": -%>
@@ -193,17 +193,18 @@
 
 <%- include('tables.preamble.de.tex', this); -%>
 
+<%- include('footnotes.preamble.en.tex', this); -%>
+
 <%- include('todo.preamble.en.tex', this); -%>
 
-% Fußnoten unter Gleitumgebungen ("floats") platzieren
-% Quelle: https://tex.stackexchange.com/a/32993/9075
-\usepackage{stfloats}
-\fnbelowfloat
+<%- include('siunitx.preamble.de.tex'); -%>
 
-<%- include('siunitx.preamble.de.tex'); %>
-<%- include('hyperref.preamble.de.tex', this); %>
-<%- include('subfig.preamble.en.tex', this); %>
+<%- include('hyperref.preamble.de.tex', this); -%>
+
+<%- include('subfig.preamble.en.tex', this); -%>
+
 <% if (texlive >= 2021) { %><%- include('mindflow.preamble.en.tex', this); %><% } -%>
+
 <%# acronyms load amsmath, which has to be loaded before cleveref -%>
 <% if (isThesis || feature.acronyms) { %><%- include('math.preamble.en.tex', this); -%><% } -%>
 <%- include('cleveref.preamble.de.tex', this); %>
