--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -128,6 +128,11 @@
 <%- include('babel.preamble.de.tex', this); -%>
 
 <%- include('url.preamble.de.tex', this); -%>
+
+<%# acronyms and unicode-math load amsmath, which has to be loaded before cleveref; we need it to load early to avoid option clash -%>
+<% if (isThesis || feature.acronyms) { %><%- include('math.preamble.en.tex', this); -%>
+
+<% } -%>
 <%# ACM already provides a very good font configuration; thus we do not need to override it -%>
 <% if (documentclass != 'acmart') { %>
 <%- include('font.preamble.en.tex', this); -%>
@@ -205,9 +210,8 @@
 
 <% if (texlive >= 2021) { %><%- include('mindflow.preamble.en.tex', this); %><% } -%>
 
-<%# acronyms load amsmath, which has to be loaded before cleveref -%>
-<% if (isThesis || feature.acronyms) { %><%- include('math.preamble.en.tex', this); -%><% } -%>
-<%- include('cleveref.preamble.de.tex', this); %>
+<%- include('cleveref.preamble.de.tex', this); -%>
+
 \usepackage{lipsum}
 <% if (examples) { -%>
 
