--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -128,7 +128,7 @@
 <%- include('url.preamble.en.tex', this); -%>
 
 <%# acronyms and unicode-math load amsmath, which has to be loaded before cleveref; we need it to load early to avoid option clash -%>
-<% if (isThesis || feature.acronyms) { %><%- include('math.preamble.en.tex', this); -%>
+<% if (feature.acronyms) { %><%- include('math.preamble.en.tex', this); -%>
 
 <% } -%>
 <%# ACM already provides a very good font configuration; thus we do not need to override it -%>
