Add floatflt alternatives

--- a/generators/app/templates/floatflt.preamble.en.tex
+++ b/generators/app/templates/floatflt.preamble.en.tex
@@ -1,2 +1,19 @@
 % Put figures aside a text
+% Even thought he package is from 1998, it works well
 \usepackage[rflt]{floatflt}
+<%# alternatives
+
+%%% Doc: http://mirror.ctan.org/tex-archive/macros/latex209/contrib/picins/picins.doc
+%\usepackage{picins}          % LaTeX 2.09 Paket von 1992. aber Layout kombatibel
+%Olly prefers picins over wrapfig
+
+%%% Bilder von Text Umfliessen lassen : (empfehle wrapfig)
+%
+%%% Doc: http://mirror.ctan.org/tex-archive/macros/latex/contrib/wrapfig/wrapfig.sty
+\usepackage{wrapfig}	        % defines wrapfigure and wrapfloat
+%\setlength{\wrapoverhang}{\marginparwidth} % aeerlapp des Bildes ...
+%\addtolength{\wrapoverhang}{\marginparsep} % ... in den margin
+\setlength{\intextsep}{0.5\baselineskip} % Platz ober- und unterhalb des Bildes
+% \intextsep ignoiert bei draft ???
+%\setlength{\columnsep}{1em} % Abstand zum Text
+-%>
