Rename sublfoat.example to subfig.example - to match package name

--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -913,10 +913,14 @@ Hier sollen allgemeine \LaTeX-Hinweise gegeben werden, damit man Minimalbeispiel
 <% } -%>
 <% if (enquotes == 'plainlatex') { %><%- include('plainlatex.enquotes.example.de.tex', this); %>
 <% } -%>
-<%- include('cleveref.example.en.tex', this); %>
+<%- include('cleveref.example.en.tex', this); -%>
+
 <%- include('figure.example.de.tex', this); -%>
-<%- include('subfloat.example.en.tex', this); %>
-<%- include('tables.example.en.tex', this); %>
+
+<%- include('subfig.example.en.tex', this); -%>
+
+<%- include('tables.example.en.tex', this); -%>
+
 <% if (listings == 'listings') { -%>
 <%- include('listings.example.de.tex', this); %>
 <% } else { -%>
