--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -902,10 +902,14 @@ It focuses on minimal examples, which can be directly adapted to the content
 <% } -%>
 <% if (enquotes == 'plainlatex') { %><%- include('plainlatex.enquotes.example.en.tex', this); %>
 <% } -%>
-<%- include('cleveref.example.en.tex', this); %>
-<%- include('figure.example.en.tex', this); %>
-<%- include('subfloat.example.en.tex', this); %>
-<%- include('tables.example.en.tex', this); %>
+<%- include('cleveref.example.en.tex', this); -%>
+
+<%- include('figure.example.en.tex', this); -%>
+
+<%- include('subfig.example.en.tex', this); -%>
+
+<%- include('tables.example.en.tex', this); -%>
+
 <% if (listings == 'listings') { -%>
 <%- include('listings.example.en.tex', this); %>
 <% } else { -%>
