--- a/generators/app/templates/subfig.example.en.tex
+++ b/generators/app/templates/subfig.example.en.tex
@@ -1,3 +1,4 @@
+<%# \subfloat is defined by the subfig package -%>
 <%= heading2 %>{Sub Figures}
 
 An example of two sub figures is shown in \cref{fig:two_sub_figures}.
