--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -915,7 +915,7 @@ Hier sollen allgemeine \LaTeX-Hinweise gegeben werden, damit man Minimalbeispiel
 <% } -%>
 <%- include('cleveref.example.en.tex', this); -%>
 
-<%- include('figure.example.de.tex', this); -%>
+<%- include('floats.example.de.tex', this); -%>
 
 <%- include('subfig.example.en.tex', this); -%>
 
