--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -904,7 +904,7 @@ It focuses on minimal examples, which can be directly adapted to the content
 <% } -%>
 <%- include('cleveref.example.en.tex', this); -%>
 
-<%- include('figure.example.en.tex', this); -%>
+<%- include('floats.example.en.tex', this); -%>
 
 <%- include('subfig.example.en.tex', this); -%>
 
