--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -218,6 +218,8 @@
 
 <%- include('hyperref.preamble.en.tex', this); -%>
 
+<%- include('floats.preamble.en.tex', this); -%>
+
 <%- include('subfig.preamble.en.tex', this); -%>
 
 <% if (texlive >= 2021) { %><%- include('mindflow.preamble.en.tex', this); %><% } -%>
