Add USTUTT index

--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -166,6 +166,14 @@
 <% } -%>
 <%- include('diagbox.preamble.en.tex', this); -%>
 
+<% if (documentclass == 'ustutt') { -%>
+%% Index
+\usepackage{makeidx}		% Index
+\IfDraft{
+  \usepackage{showidx}    % Indizierte Begriffe am Rand (Korrekturlesen)
+}
+
+<% } -%>
 <%# Required for package pdfcomment later -%>
 \usepackage{xcolor}
 
