--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -169,6 +169,14 @@
 
 <%- include('diagbox.preamble.en.tex', this); -%>
 
+<% if (documentclass == 'ustutt') { -%>
+%% Index
+\usepackage{makeidx}		% Index
+\IfDraft{
+  \usepackage{showidx}    % Indizierte Begriffe am Rand (Korrekturlesen)
+}
+
+<% } -%>
 <%- include('xcolor.preamble.de.tex', this); -%>
 
 <% if (listings == 'listings') { -%>
