Load xcolor preamble also in en

--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -174,8 +174,7 @@
 }
 
 <% } -%>
-<%# Required for package pdfcomment later -%>
-\usepackage{xcolor}
+<%- include('xcolor.preamble.de.tex', this); -%>
 
 <% if (listings == 'listings') { -%>
 <%- include('listings.preamble.en.tex', this); -%>
