Port listings config from USTUTT

--- a/generators/app/templates/listings.preamble.en.tex
+++ b/generators/app/templates/listings.preamble.en.tex
@@ -46,19 +46,35 @@
   %
   extendedchars=true,
   %
+  <% if (documentclass == "ustutt") { -%>
+  basicstyle=\small\ttfamily,
+  stepnumber=2,               % Abstand zwischen den Zeilennummern
+  numbersep=5pt,              % Abstand der Nummern zum Text
+%        keywordstyle=[1]\textbf,    % Stil der Keywords
+%        keywordstyle=[2]\textbf,    %
+%        keywordstyle=[3]\textbf,    %
+%        keywordstyle=[4]\textbf,    %
+%        stringstyle=\color{stringcolor}, % Farbe der Strings, stringcolor derzeit undefiniert
+  showspaces=false,           % Leerzeichen anzeigen ?
+  showtabs=false,             % Tabs anzeigen ?
+  showstringspaces=false      % Leerzeichen in Strings anzeigen ?
+<% } else { -%>
   basicstyle=\footnotesize\ttfamily,
+  <% } -%>
   %
   commentstyle=\slshape,
   %
   % default: \rmfamily
   stringstyle=\ttfamily,
   %
-  breaklines=true,
+  breaklines=true,           % Zeilen werden umbrochen
   %
   breakatwhitespace=true,
   %
   % alternative: fixed
   columns=flexible,
+  %
+  tabsize=2,                  % Groesse von Tabs
   %
   numbers=left,
   %
@@ -108,3 +124,12 @@
 \usepackage{chngcntr}
 \AtBeginDocument{\counterwithout{lstlisting}{section}}
 <% } -%>
+
+\lstloadlanguages{% Check dokumentation for further languages...
+        %[Visual]Basic
+        %Pascal
+        %C
+        %C++
+        %XML
+        %HTML
+}
