--- a/generators/app/templates/listings.preamble.de.tex
+++ b/generators/app/templates/listings.preamble.de.tex
@@ -43,19 +43,35 @@
   %
   extendedchars=true,
   %
+  <% if (documentclass == "ustutt") { -%>
+  basicstyle=\small\ttfamily,
+  stepnumber=2,               % Abstand zwischen den Zeilennummern
+  numbersep=5pt,              % Abstand der Nummern zum Text
+%        keywordstyle=[1]\textbf,    % Stil der Keywords
+%        keywordstyle=[2]\textbf,    %
+%        keywordstyle=[3]\textbf,    %
+%        keywordstyle=[4]\textbf,    %
+%        stringstyle=\color{stringcolor}, % Farbe der Strings, stringcolor derzeit undefiniert
+  showspaces=false,           % Leerzeichen anzeigen ?
+  showtabs=false,             % Tabs anzeigen ?
+  showstringspaces=false      % Leerzeichen in Strings anzeigen ?
+<% } else { -%>
   basicstyle=\footnotesize\ttfamily,
+  <% } -%>
   %
   commentstyle=\slshape,
   %
   % Default: \rmfamily, damit werden die Strings im Quellcode hervorgehoben. Zusaetzlich evtl.: \scshape oder \rmfamily durch \ttfamily ersetzen. Dann sieht's aus, wie bei fancyvrb
   stringstyle=\ttfamily,
   %
-  breaklines=true,
+  breaklines=true,            % Zeilen werden umbrochen
   %
   breakatwhitespace=true,
   %
   % Alternative: fixed
   columns=flexible,
+  %
+  tabsize=2,                  % Groesse von Tabs
   %
   numbers=left,
   %
@@ -105,3 +121,12 @@
 \usepackage{chngcntr}
 \AtBeginDocument{\counterwithout{lstlisting}{section}}
 <% } -%>
+
+\lstloadlanguages{% Check dokumentation for further languages...
+        %[Visual]Basic
+        %Pascal
+        %C
+        %C++
+        %XML
+        %HTML
+}
