Switch to friendly_grayscale

--- a/generators/app/templates/minted.preamble.en.tex
+++ b/generators/app/templates/minted.preamble.en.tex
@@ -1,3 +1,4 @@
+% See https://github.com/gpoore/minted
 \usepackage[newfloat]{minted}
 
 \setminted{
@@ -14,9 +15,9 @@
     % breakbytokenanywhere=true
 }
 
-\usemintedstyle{bw} %black and white style
+%\usemintedstyle{bw} %black and white style
 %\usemintedstyle{vs} %visual studio
-%\usemintedstyle{friendlygrayscale} % custom style - submitted as pull request https://bitbucket.org/birkenfeld/pygments-main/pull-requests/748/add-style-friendly-grayscale/diff
+\usemintedstyle{friendly_grayscale}
 %\usemintedstyle{friendly}
 %\usemintedstyle{eclipse} %http://www.jevon.org/wiki/Eclipse_Pygments_Style
 %\usemintedstyle{autumn}
