Add minted config for USTUTT thesis

--- a/generators/app/templates/minted.preamble.en.tex
+++ b/generators/app/templates/minted.preamble.en.tex
@@ -38,3 +38,8 @@
 % Intermediate solution for hyperlinked refs. See https://tex.stackexchange.com/q/132420/9075 for more information.
 \newcommand{\labelline}[1]{\label[line]{#1}\hypertarget{#1}{}}
 \newcommand{\refline}[1]{\hyperlink{#1}{\FancyVerbLineautorefname~\ref*{#1}}}
+<% if (documentclass == "ustutt") { -%>
+
+% Zeilennummern innerhalb vom Rand:
+\setminted{numbersep=5pt, xleftmargin=12pt}
+<% } -%>
