Add TOC configuration

--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -333,7 +333,13 @@
 \fi
 <% } -%>
 <% } -%>
+<% if (documentclass == 'ustutt') { -%>
 
+%% Inhaltsverzeichnis (Schrift, Aussehen) sowie weitere Verzeichnisse ====
+\setcounter{secnumdepth}{3}    % Abbildungsnummerierung mit groesserer Tiefe
+\setcounter{tocdepth}{2}       % Inhaltsverzeichnis mit groesserer Tiefe
+
+<% } -%>
 \begin{document}
 <% if ((latexcompiler == "lualatex") || (latexcompiler == "both")) { -%>
 <% if (latexcompiler == "both") { -%>
