--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -175,7 +175,6 @@
 
 <% } -%>
 <%- include('xcolor.preamble.de.tex', this); -%>
-
 <% if (listings == 'listings') { -%>
 <%- include('listings.preamble.en.tex', this); -%>
 <% } else { -%>
@@ -338,7 +337,13 @@
 \fi
 <% } -%>
 <% } -%>
+<% if (documentclass == 'ustutt') { -%>
 
+%% Inhaltsverzeichnis (Schrift, Aussehen) sowie weitere Verzeichnisse ====
+\setcounter{secnumdepth}{3}    % Abbildungsnummerierung mit groesserer Tiefe
+\setcounter{tocdepth}{2}       % Inhaltsverzeichnis mit groesserer Tiefe
+
+<% } -%>
 \begin{document}
 <% switch (documentclass) { case "lncs": -%>
 
