--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -224,7 +224,13 @@
 
 <%- include('todo.preamble.en.tex', this); -%>
 
-<%- include('siunitx.preamble.de.tex'); -%>
+<%- include('siunitx.preamble.en.tex'); -%>
+<% if (isThesis) { -%>
+
+<%- include('varioref.preamble.de.tex', this); %>
+<% } -%>
+
+<%- include('varioref.preamble.de.tex', this); -%>
 
 <%- include('hyperref.preamble.de.tex', this); -%>
 
@@ -947,6 +953,11 @@ Hier sollen allgemeine \LaTeX-Hinweise gegeben werden, damit man Minimalbeispiel
 <% } -%>
 <%- include('otherfeatures.example.en.tex', this); %>
 <% } -%>
+<% if (isThesis) { -%>
+
+<%- include('varioref.example.en.tex', this); %>
+<% } -%>
+
 <% if (howtotext) { -%>
 
 %%% ===============================================================================
