--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -221,6 +221,10 @@
 <%- include('todo.preamble.en.tex', this); -%>
 
 <%- include('siunitx.preamble.en.tex'); -%>
+<% if (isThesis) { -%>
+
+<%- include('varioref.preamble.en.tex', this); %>
+<% } -%>
 
 <%- include('hyperref.preamble.en.tex', this); -%>
 
@@ -264,6 +268,8 @@
 
 \newcommand{\eg}{e.g.,\ }
 \newcommand{\ie}{i.e.,\ }
+\newcommand\bhrule{\typeout{------------------------------------------------------------------------------}}
+\newcommand\btypeout[1]{\bhrule\typeout{\space #1}\bhrule}
 
 % Enable hyphenation at other places as the dash.
 % Example: applicaiton\hydash specific
@@ -934,6 +940,11 @@ It focuses on minimal examples, which can be directly adapted to the content
 <% } -%>
 <%- include('otherfeatures.example.en.tex', this); %>
 <% } -%>
+<% if (isThesis) { -%>
+
+<%- include('varioref.example.en.tex', this); %>
+<% } -%>
+
 <% if (howtotext) { -%>
 
 %%% ===============================================================================
