Unify hyperref config

--- a/generators/app/templates/hyperref.preamble.de.tex
+++ b/generators/app/templates/hyperref.preamble.de.tex
@@ -1,52 +1,4 @@
-% Enable that parameters of \cref{}, \ref{}, \cite{}, ... are linked so that a reader can click on the number an jump to the target in the document
-\usepackage{hyperref}
-
-<% if (documentclass != "ustutt") { %>% Enable hyperref without colors and without bookmarks<% } -%>
-\hypersetup{
-  <% if (documentclass == "ustutt") { -%>
-  urlcolor=pdfurlcolor,    % \href{...}{...} external (URL)
-  filecolor=pdffilecolor,  % \href{...} local file
-  linkcolor=pdflinkcolor,  %\ref{...} and \pageref{...}
-  citecolor=pdfcitecolor,  %
-  %backref=none,            % Backlinks im Literaturverzeichnis (section, slide, page, none)
-  %pagebackref=true,        % Backlinks im Literaturverzeichnis mit Seitenangabe. Jetzt mit biblatex
-  %verbose,
-  hyperindex=true,         % backlinkex index
-  linktocpage=false,       % Inhaltsverzeichnis verlinkt komplette Ueberschrift
-  hyperfootnotes=true,     % Links auf Fussnoten
-  % Bookmarks
-  bookmarks=true,          % Erzeugung von Bookmarks fuer PDF-Viewer
-  bookmarksopenlevel=1,    % Gliederungstiefe der Bookmarks
-  bookmarksopen=true,      % Expandierte Untermenues in Bookmarks
-  bookmarksnumbered=true,  % Nummerierung der Bookmarks
-  bookmarkstype=toc,       % Art der Verzeichnisses
-  % Anchors
-  plainpages=false,        % Anchors even on plain pages ?
-  pageanchor=true,         % Pages are linkable
-  % PDF Informationen
-  pdftitle={},             % Titel
-  pdfauthor={},            % Autor
-  pdfcreator={LaTeX, hyperref, KOMA-Script}, % Ersteller
-  %pdfproducer={pdfeTeX 1.10b-2.1} %Produzent
-  pdfdisplaydoctitle=true, % Dokumententitel statt Dateiname im Fenstertitel
-  pdfpagemode=UseOutlines, % Bookmarks im Viewer anzeigen
-  pdfpagelabels=true,      % set PDF page labels
-  pdfpagelayout=TwoPageRight, % zweiseitige Darstellung: ungerade Seiten
-  									 % rechts im PDF-Viewer
-  %pdfpagelayout=SinglePage, % einseitige Darstellung
-  <% } else { -%>
-  hidelinks,
-  <% } -%>
-  colorlinks=true, % Links erhalten Farben statt Kaeten
-  raiselinks=true,			 % calculate real height of the link
-  allcolors=black,
-  pdfstartview=Fit,
-  breaklinks=true,       % Links ueberstehen Zeilenumbruch
-  hypertexnames=false,   % Fix jumping to algorithm line - http://tex.stackexchange.com/a/156404/9075
-}
-
-% Enable correct jumping to figures when referencing
-\usepackage[all]{hypcap}
+<%- include('hyperref.preamble.en.tex', this); -%>
 
 % Hint by https://tex.stackexchange.com/a/193370/9075 to suppress strange outputs of the babel package
 % Example strange output: Package babel Info: Redefining ngerman shorthand "|
