Port biblatex config

--- a/generators/app/templates/biblatex.preamble.en.tex
+++ b/generators/app/templates/biblatex.preamble.en.tex
@@ -14,8 +14,8 @@
   natbib        = true,
   eprint        = true,
   url           = true,
-  doi           = true,
-  isbn          = true,
+  doi           = true, %source: http://tex.stackexchange.com/a/23118/9075
+  isbn          = true, %source: http://tex.stackexchange.com/a/23118/9075
   backref       = true]{biblatex}
 
 % enable more breaks at URLs. See https://tex.stackexchange.com/a/134281.
@@ -59,3 +59,8 @@
 \printtext[bibhyperref]{\printnames{labelname}}}
 {\multicitedelim}
 {\usebibmacro{postnote}}
+<% if (documentclass == "ustutt") { %>
+
+% Reduce size of bib font: http://tex.stackexchange.com/questions/329/how-to-change-font-size-for-bibliography
+\renewcommand{\bibfont}{\normalfont\small}
+<% } -%>
