--- a/generators/app/templates/ustutt-todo.tex
+++ b/generators/app/templates/ustutt-todo.tex
@@ -2,3 +2,5 @@
 
 %see http://tex.stackexchange.com/a/48549/9075
 \usepackage[normalem]{ulem} % use normalem to protect \emph
+
+% Add example for pdflscape
