Port more float stuff

--- a/generators/app/templates/subfig.preamble.en.tex
+++ b/generators/app/templates/subfig.preamble.en.tex
@@ -3,3 +3,10 @@
 <% } else { -%>
 \usepackage[caption=false,font=footnotesize]{subfig}
 <% } -%>
+
+% Alternative for making subfigures:
+% Part of the caption package. See http://www.ctan.org/pkg/caption
+%
+% (subfigure is outdated. subfig is maintained, but subcaption is better)
+% See: http://tex.stackexchange.com/questions/13625/subcaption-vs-subfig-best-package-for-referencing-a-subfigure
+%\usepackage{subcaption}
