--- a/generators/app/templates/floats.preamble.en.tex
+++ b/generators/app/templates/floats.preamble.en.tex
@@ -62,4 +62,6 @@
 % Alternatives Paket: rotating Allerdings wird hier nur das Bild gedreht, während bei lscape auch die PDF-Seite gedreht wird.
 %Das Paket lscape dreht die Seite auch nicht
 \usepackage{pdflscape}
+
+\floatstyle{ruled} %%???
 <% } -%>
