--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -240,6 +240,8 @@
 
 <% if (texlive >= 2021) { %><%- include('mindflow.preamble.en.tex', this); %><% } -%>
 
+<% if (isThesis) { %><%- include('algorithms.preamble.en.tex', this); %><% } -%>
+
 <%- include('cleveref.preamble.de.tex', this); -%>
 
 \usepackage{lipsum}
