--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -234,6 +234,8 @@
 
 <% if (texlive >= 2021) { %><%- include('mindflow.preamble.en.tex', this); %><% } -%>
 
+<% if (isThesis) { %><%- include('algorithms.preamble.en.tex', this); %><% } -%>
+
 <%- include('cleveref.preamble.en.tex', this); -%>
 
 \usepackage{lipsum}
