--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -347,6 +347,11 @@
 \setcounter{secnumdepth}{3}    % Abbildungsnummerierung mit groesserer Tiefe
 \setcounter{tocdepth}{2}       % Inhaltsverzeichnis mit groesserer Tiefe
 
+% Align page sizes
+% Seems to be required somehow
+\setlength{\pdfpageheight}{\paperheight}
+\setlength{\pdfpagewidth}{\paperwidth}
+
 <% } -%>
 \begin{document}
 <% if ((latexcompiler == "lualatex") || (latexcompiler == "both")) { -%>
