--- a/generators/app/templates/ustutt-todo.tex
+++ b/generators/app/templates/ustutt-todo.tex
@@ -3,4 +3,8 @@
 %see http://tex.stackexchange.com/a/48549/9075
 \usepackage[normalem]{ulem} % use normalem to protect \emph
 
+\usepackage{layout} % use with \layout, print page dimensions
+
+\usepackage{blindtext}
+
 % Add example for pdflscape
