--- a/generators/app/templates/tables.preamble.de.tex
+++ b/generators/app/templates/tables.preamble.de.tex
@@ -12,3 +12,20 @@
 
 %%% Doc: http://mirror.ctan.org/tex-archive/macros/latex/contrib/supertabular/supertabular.pdf
 %\usepackage{supertabular}
+<% if (documentclass == 'ustutt') { %>
+
+%%% Neue Tabellen-Umgebungen:
+% ---------------------------
+% Spalten automatischer Breite:
+%%% Doc: Documentation inside dtx Package
+% \usepackage{tabularx}
+% -> nach hyperref Laden
+% -> wird von ltxtable geladen
+
+% Tabellen ueber mehere Seiten
+% ----------------------------
+%%% Doc: http://mirror.ctan.org/tex-archive/macros/latex/contrib/carlisle/ltxtable.pdf
+% \usepackage{ltxtable} % Longtable + tabularx
+                        % (multi-page tables) + (auto-sized columns in a fixed width table)
+% -> nach hyperref laden
+<% } -%>
