--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -166,6 +166,8 @@
 \graphicspath{ {figures/} }
 
 <% } -%>
+%%% Doc: http://mirror.ctan.org/tex-archive/macros/latex/contrib/pdfpages/pdfpages.pdf
+\usepackage{pdfpages} % Include pages from external PDF documents in LaTeX documents
 
 <%- include('diagbox.preamble.en.tex', this); -%>
 
