--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -158,12 +158,16 @@
 <% } -%>
 
 \usepackage{graphicx}
+
 <% if (documentclass == 'ustutt') { %>
 
 % Base folder, so there is no need to repeat this over and over again.
 \graphicspath{ {figures/} }
 
 <% } -%>
+%%% Doc: http://mirror.ctan.org/tex-archive/macros/latex/contrib/pdfpages/pdfpages.pdf
+\usepackage{pdfpages} % Include pages from external PDF documents in LaTeX documents
+
 <%- include('diagbox.preamble.en.tex', this); -%>
 
 <% if (documentclass == 'ustutt') { -%>
