--- a/generators/app/templates/csquotes.preamble.en.tex
+++ b/generators/app/templates/csquotes.preamble.en.tex
@@ -10,3 +10,8 @@
 % Enable using "`quote"' - see https://tex.stackexchange.com/a/150954/9075
 \defineshorthand{"`}{\openautoquote}
 \defineshorthand{"'}{\closeautoquote}
+<% if (documentclass == "ustutt") { -%>
+
+% Gegenstück zu \enquote
+\newcommand{\enbracket}[1]{(#1)\xspace}
+<% } -%>
