--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -240,10 +240,12 @@
 
 <%- include('subfig.preamble.en.tex', this); -%>
 
-<% if (texlive >= 2021) { %><%- include('mindflow.preamble.en.tex', this); %><% } -%>
+<% if (texlive >= 2021) { %><%- include('mindflow.preamble.en.tex', this); %>
 
-<% if (isThesis) { %><%- include('algorithms.preamble.en.tex', this); %><% } -%>
+<% } -%>
+<% if (isThesis) { %><%- include('algorithms.preamble.en.tex', this); %>
 
+<% } -%>
 <%- include('cleveref.preamble.de.tex', this); -%>
 
 \usepackage{lipsum}
@@ -343,18 +345,7 @@
 \fi
 <% } -%>
 <% } -%>
-<% if (documentclass == 'ustutt') { -%>
-
-%% Inhaltsverzeichnis (Schrift, Aussehen) sowie weitere Verzeichnisse ====
-\setcounter{secnumdepth}{3}    % Abbildungsnummerierung mit groesserer Tiefe
-\setcounter{tocdepth}{2}       % Inhaltsverzeichnis mit groesserer Tiefe
-
-% Align page sizes
-% Seems to be required somehow
-\setlength{\pdfpageheight}{\paperheight}
-\setlength{\pdfpagewidth}{\paperwidth}
-
-<% } -%>
+<% if (isThesis) { %><%- include('thesis-additions.en.tex', this); %><% } -%>
 \begin{document}
 <% if ((latexcompiler == "lualatex") || (latexcompiler == "both")) { -%>
 <% if (latexcompiler == "both") { -%>
