--- a/generators/app/templates/cleveref.preamble.en.tex
+++ b/generators/app/templates/cleveref.preamble.en.tex
@@ -19,3 +19,8 @@
 \crefname{lstlisting}{Listing}{Listings}
 \Crefname{lstlisting}{Listing}{Listings}
 <% } -%>
+<% if (documentclass == "ustutt") { -%>
+
+% Gegenstück zu \enquote
+\newcommand{\enbracket}[1]{(#1)\xspace}
+<% } -%>
